# lido-accounting-oracle

./: .env.example  Cargo.toml  Dockerfile  README.md  justfile  rust-toolchain.toml
.github/actions/bininstall-risc0/: action.yml
.github/workflows/: build_guest.yml  main.yml
cli/: Cargo.toml
cli/src/: beacon_client.rs  boundless.rs  daemon.rs  main.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  config.toml
contracts/src/: IOracleProofReceiver.sol  ISecondOpinionOracle.sol  SecondOpinionOracle.sol  TestVerifier.sol
crates/beacon-state/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: eip4788.rs  error.rs  generate_report.rs  input.rs  journal.rs  lib.rs  soltypes.rs
crates/core/tests/: e2e_mock_proofs.rs  generate_report.rs
crates/gindices/: Cargo.toml  README.md
crates/gindices/src/: guest_gindices.rs  lib.rs
crates/test-utils/src/: lib.rs
guests/oracle/guest/: Cargo.toml
guests/oracle/guest/src/: lib.rs
infra/daemon/: Pulumi.yaml  package-lock.json  package.json
zkvm/oracle/: Cargo.toml  build.rs
zkvm/oracle/guest/: Cargo.toml
zkvm/oracle/guest/src/: lib.rs
