[package]
name = "gindices"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_gindices"
path = "src/bin/gen_gindices.rs"
required-features = ["codegen"]

[dependencies]
quote = { version = "1.0", optional = true}
ethereum-consensus = { workspace = true, optional = true, features = ["serde"] }
ssz_rs = { workspace = true, optional = true }
syn = { version = "2.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
prettyplease = { version = "0.2", optional = true }
beacon-state = { workspace = true, optional = true }

[features]
default = []
codegen = ["ethereum-consensus", "ssz_rs", "quote", "syn", "proc-macro2", "prettyplease", "beacon-state"]
