[package]
name = "oracle"
edition = "2021"

[workspace]

[dependencies]
lido_oracle_core = { path = "../../../crates/core", default-features = false }

alloy-primitives = { version = "1.4.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.4.1" }
bincode = { version = "1.3" }

risc0-zkvm = { version = "3.0.3", default-features = false, features = ['std', 'unstable'] }
risc0-steel = { git = "https://github.com/boundless-xyz/steel", tag = "v2.4.1", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
