[package]
name = "oracle"
edition = "2021"

[workspace]

[dependencies]
lido_oracle_core = { path = "../../../crates/core", default-features = false }

alloy-primitives = { version = "1.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.3" }
bincode = { version = "1.3" }

risc0-zkvm = { version = "3.0.4", default-features = false, features = ['std', 'unstable'] }
risc0-steel = { git = "https://github.com/boundless-xyz/steel", rev = "4e8cd74c77a6ff62d04ed9d266c1a1bc557c6153", default-features = false } # uses rev to get Hoodi compatible version pre-release. Update once features are released

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
